--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -282,6 +282,7 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="ram_used">Ram Used :</string>
     <string name="internal_storage_used">Internal Storage Used :</string>
     <string name="external_storage_used">External Storage Used :</string>
+    <string name="units">units:</string>
 
     <string-array name="dummy_headers">
         <item>SAR AND YOUR BODY</item>
