--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">Sense It All!</string>
+    <!--<string name="app_name">Sense It All!</string>-->
     <string name="app_name_simple">SENSE IT ALL - Device Test</string>
     <string name="app_name_first_half">SENSE IT ALL</string>
 
