--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,6 +186,7 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="tag_request_fragment">REQUEST FRAGMENT</string>
     <string name="tag_directions_fragment">DIRECTIONS FRAGMENT</string>
     <string name="tag_test_fragment">TEST FRAGMENT</string>
+    <string name="tag_gps_fragment">GPS FRAGMENT</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
