--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -295,6 +295,8 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="total_number_of_steps_detected">TOTAL NUMBER OF STEPS DETECTED</string>
     <string name="total_distance_covered">TOTAL DISTANCE COVERED</string>
     <string name="open_vr_sample_tests">OPEN VR SAMPLE TESTS</string>
+    <string name="popular_tools">Popular Tools</string>
+    <string name="popular_tests">Popular Tests</string>
 
     <string-array name="dummy_headers">
         <item>SAR AND YOUR BODY</item>
