--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,6 +190,7 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="tag_tools_fragment">TOOLS FRAGMENT</string>
     <string name="tag_discover_fragment">DISCOVER FRAGMENT</string>
     <string name="tag_profile_fragment">PROFILE FRAGMENT</string>
+    <string name="tag__volume_control_fragment">VOLUME CONTROL FRAGMENT</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -301,6 +302,10 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="quick_toggle_settings">Quick Toggle Settings</string>
     <string name="image_tools">Image Tools</string>
     <string name="everyday_tools">Everyday Tools</string>
+    <string name="media_volume">Media Volume</string>
+    <string name="alarm_volume">Alarm Volume</string>
+    <string name="ring_volume">Ring Volume</string>
+    <string name="call_volume">Call Volume</string>
 
     <string-array name="dummy_headers">
         <item>SAR AND YOUR BODY</item>
