internet speed test library integrated (JSpeedTest)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,6 +191,7 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="tag_discover_fragment">DISCOVER FRAGMENT</string>
     <string name="tag_profile_fragment">PROFILE FRAGMENT</string>
     <string name="tag_volume_control_fragment">VOLUME CONTROL FRAGMENT</string>
+    <string name="tag_internet_speed_fragment">INTERNET SPEED FRAGMENT</string>
     <string name="tag_sound_level_fragment">SOUND LEVEL FRAGMENT</string>
     <string name="tag_calendar_fragment">CALENDAR SHEET</string>
     <string name="tag_timer_fragment">TIMER FRAGMENT</string>
