--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,6 +192,7 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="tag_profile_fragment">PROFILE FRAGMENT</string>
     <string name="tag_note_fragment">NOTE FRAGMENT</string>
     <string name="tag_alarm_fragment">ALARM FRAGMENT</string>
+    <string name="tag_reminder_fragment">REMINDER FRAGMENT</string>
     <string name="tag_volume_control_fragment">VOLUME CONTROL FRAGMENT</string>
     <string name="tag_internet_speed_fragment">INTERNET SPEED FRAGMENT</string>
     <string name="tag_sound_level_fragment">SOUND LEVEL FRAGMENT</string>
