--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2425,6 +2425,7 @@ In parallel France and Germany signed a joint development agreement in 1984 and 
 
     <string name="calc_answer">Ans</string>
     <string name="start">START</string>
+    <string name="your_alarms">YOUR ALARMS</string>
 
     <string-array name="calc_dialog_errors">
         <item>Division by zero</item>
