--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2427,6 +2427,8 @@ In parallel France and Germany signed a joint development agreement in 1984 and 
     <string name="start">START</string>
     <string name="your_alarms">YOUR ALARMS</string>
     <string name="new_alarm">ADD ALARM</string>
+    <string name="add_note">ADD NOTE</string>
+    <string name="your_notes">YOUR NOTES</string>
 
     <string-array name="calc_dialog_errors">
         <item>Division by zero</item>
