--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -199,6 +199,7 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="tag_calculator_fragment">CALCULATOR FRAGMENT</string>
     <string name="tag_calendar_fragment">CALENDAR SHEET</string>
     <string name="tag_checklist_fragment">CHECKLIST SHEET</string>
+    <string name="tag_crop_fragment">CROP FRAGMENT</string>
     <string name="tag_timer_fragment">TIMER FRAGMENT</string>
     <string name="tag_note_input_fragment">NOTE INPUT FRAGMENT</string>
     <string name="tag_timer_sheet">TIMER SHEET</string>
