--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2435,6 +2435,7 @@ In parallel France and Germany signed a joint development agreement in 1984 and 
     <string name="your_notes">YOUR NOTES</string>
     <string name="save_edited_note">SAVE EDITED NOTE</string>
     <string name="no_results_to_show">NO RESULTS TO SHOW</string>
+    <string name="no_image_selected">NO IMAGE SELECTED</string>
 
     <string-array name="calc_dialog_errors">
         <item>Division by zero</item>
