--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -313,7 +313,7 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="popular_tools">Popular Tools</string>
     <string name="popular_tests">Popular Tests</string>
     <string name="all_categories">All Categories</string>
-    <string name="quick_toggle_settings">Quick Toggle Settings</string>
+    <string name="quick_toggle_settings">Quick Settings</string>
     <string name="image_tools">Image Tools</string>
     <string name="everyday_tools">Everyday Tools</string>
     <string name="media_volume">Media Volume</string>
