--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <!--<string name="app_name">Sense It All!</string>-->
     <string name="app_name_simple">SENSE IT ALL - Device Test</string>
     <string name="app_name_first_half">SENSE IT ALL</string>
+    <string name="app_name_first_half_small">Sense It All</string>
 
     <string-array name="lightPercentages">
         <item>0 to 10 %</item>
