--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="app_name_first_half">SENSE IT ALL</string>
     <string name="app_name_first_half_small">Sense It All</string>
 
+    <string name="permission_granted">Permission granted.</string>
+    <string name="permission_denied">Permission denied.</string>
+
     <string-array name="lightPercentages">
         <item>0 to 10 %</item>
         <item>11 to 20 %</item>
